--- a/angularHTMLayout/coffee/actionOnObjectPage.ng.html
+++ b/angularHTMLayout/coffee/actionOnObjectPage.ng.html
@@ -77,7 +77,7 @@
       <div class="rowFlex bootstrap-iso">
         <div class="row-cell row-cell-label">{{$root.i18n('hideElement_action_type')}} :&nbsp;</div>
         <div class="row-cell row-cell-value" style="display:inline-flex">
-          <select ng-options="t as t for t in actionType" ng-model="op.actionType"></select>
+          <select ng-options="t as t for t in actionType" ng-model="op.actionType" ng-change="clearOperationnParam(op)"></select>
           <input ng-if="op.actionType === 'highlight'" type="color" ng-model="op.highlightColor" />
         </div>
       </div>
@@ -135,6 +135,13 @@
         </div>
       </div>
       <div ng-if="op.actionType === 'displaymsg'">
+        <div ng-if="currentSchema.Tab.Tabs.length > 0" class="row-cell row-cell-value row-cell-max-width ">
+          <div class="cell-content-wrapper filter-wrapper propertieslist bootstrap-iso">
+            <div class="add-filter-button" ng-repeat="t in currentSchema.Tab.Tabs | orderBy:'name'">
+              <a class="btn-add-filter btn page-action" ng-class="op.tabs.indexOf(t.Id) !== -1? ['selected'] : []" ng-click="toggleArray(op.tabs,t.Id)">{{(t.Name + ' (' + t.Id + ')')}}</a>
+            </div>
+          </div>
+        </div>
         <div class="bootstrap-iso rowFlex">
           <div class="row-cell row-cell-label">{{$root.i18n('image_url')}} :&nbsp;</div>
           <div class="row-cell row-cell-value"><input class="largeCell" ng-model="op.imageUrl" /></div>
