--- a/angularHTMLayout/coffee/checkEditModel.ng.html
+++ b/angularHTMLayout/coffee/checkEditModel.ng.html
@@ -5,13 +5,13 @@
       <select ng-change="updateCurrentView(currentView)" ng-options="v as (v.name + ' (' + v.cwView + ')')  for v in objectpages | orderBy:'name'" ng-model="currentView"></select>
     </div>
   </div>
-  <div class="row bootstrap-iso">
+  <div ng-if="indexUniqueOption" class="row bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('evolve_view_for_unicity_checking')}} :</div>
     <div class="row-cell row-cell-value">
       <select ng-options="v.cwView as (v.name + ' (' + v.cwView + ')')  for v in indexpages | orderBy:'name'" ng-model="config[currentView.cwView].unicityView"></select>
     </div>
   </div>
-  <div class="cwPropertiesTableContainer nolimit bootstrap-iso">
+  <div class="cwPropertiesTableContainer bootstrap-iso">
     <div class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">
       {{$root.i18n('properties')}}
     </div>
@@ -19,13 +19,13 @@
       <tbody>
         <tr>
           <th class="largeMediumCell">{{$root.i18n('name')}}</th>
-          <th class="tableCheckbox">{{$root.i18n('unique')}}</th>
+          <th ng-if="indexUniqueOption" class="tableCheckbox">{{$root.i18n('unique')}}</th>
           <th class="largeMediumCell">{{$root.i18n('Automatic Value')}}</th>
           <th class="mediumCell cw-hidden" ng-repeat="r in roles">{{r.name}}</th>
         </tr>
         <tr ng-repeat="p in properties">
           <th class="cw-edit-property-value ">{{p.name}} ({{p.scriptName}})</th>
-          <td class="cw-edit-property-value tableCheckbox"><input ng-model="config[currentView.cwView][p.scriptName].unique" type="checkbox" /></td>
+          <td ng-if="indexUniqueOption" class="cw-edit-property-value tableCheckbox"><input ng-model="config[currentView.cwView][p.scriptName].unique" type="checkbox" /></td>
           <td class="cw-edit-property-value"><input class="cw-edit-attr" ng-model="config[currentView.cwView][p.scriptName].automaticValue" type="text" /></td>
           <td class="cw-hidden cw-edit-property-value tableCheckbox" ng-repeat="r in roles">
             <select class="cw-edit-attr cw-edit-attr-combobox mediumCell">
