--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -62,7 +62,7 @@
     </div>
   </div>
   <div ng-if="config.displayLastMdifiedObject" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">Confgure :</div>
+    <div class="row-cell row-cell-label">Configure :</div>
     <div class="row-cell row-cell-value">
       <select ng-options="objectTypes[s].name for s in OTsSelected | orderBy:sortOT" ng-model="op.cdsSelected"></select>
     </div>
