--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -1,4 +1,9 @@
 <div>
+  <div ng-if="showDescription" class="rowFlex bootstrap-iso">
+    <div class="row-cell row-cell-value row-cell-max-width ">
+      <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/homePage_description.html'"></div>
+    </div>
+  </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('homepage_custom_remove_my_menu')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
