add filter option for homepage objects

--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -87,4 +87,45 @@
       </select>
     </div>
   </div>
+  <div ng-if="op.cdsSelected" class="bootstrap-iso row">
+    <div class="row-cell row-cell-label">{{$root.i18n('label_filter')}} :</div>
+  </div>
+  <div class="row">
+    <div ng-if="op.cdsSelected" class="row-cell row-cell-value row-cell-max-width">
+      <table class="cell-content-wrapper filter-wrapper">
+        <tr class="filter-row filter-header bootstrap-iso">
+          <th class="filter-cell filter-content header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</th>
+          <th class="filter-cell filter-operator header-cell header-operator">{{$root.i18n('label_pt_filter_column_operator')}}</th>
+          <th class="filter-cell filter-value header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</th>
+        </tr>
+        <tr class="filter-row filter-content filter-cell" ng-repeat="f in config.objectTypeToSelect[op.cdsSelected].filters">
+          <td class="filter-property-scriptname filter-cell">
+            <select ng-model="f.id" ng-change="processFilter(f)">
+              <option ng-selected="'prop_' + x.scriptName === f.id" value="prop_{{x.scriptName}}" ng-repeat="x in objectTypes[op.cdsSelected].properties">{{x.name}} </option>
+            </select>
+          </td>
+
+          <td ng-if="f.id" class="filter-operator filter-cell">
+            <div style="font-size: 2em;">=</div>
+          </td>
+          <td ng-if="f.id" class="filter-value filter-cell">
+            <input class="largeCell" ng-model="f.Value" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='text'" />
+            <input ng-model="f.Value" type="checkbox" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='checkbox'" />
+            <input ng-model="f.Value" type="date" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='date'" />
+            <input ng-model="f.Value" type="number" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='number'" />
+            <select ng-model="f.Value" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='lookup' && f.Operator != 'In'" ng-options="x.id as x.name for x in objectTypes[op.cdsSelected].properties[f.scriptname].lookups"></select>
+            <select style="height:initial" multiple size="{{objectTypes[op.cdsSelected].properties[f.scriptname].lookups.length}}" ng-model="f.Value" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='lookup' && f.Operator == 'In'" ng-options="x.id as x.name for x in objectTypes[op.cdsSelected].properties[f.scriptname].lookups"></select>
+          </td>
+          <td class="filter-cell">
+            <a class="btn page-action no-text" ng-click="config.objectTypeToSelect[op.cdsSelected].filters.splice($index,1)"><i class="fa fa-times" aria-hidden="true"></i></a>
+          </td>
+        </tr>
+        <tr>
+          <td class="add-filter-button bootstrap-iso">
+            <a class="btn-add-filter btn page-action" ng-click="addFilter(config.objectTypeToSelect[op.cdsSelected])">{{$root.i18n('label_pt_filter_add_new')}}</a>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </div>
