--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -10,147 +10,19 @@
       <input ng-model="config.removeMyMenu" type="checkbox" />
     </div>
   </div>
-  <div class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_displaydescription')}} :&nbsp;</div>
-    <div class="row-cell row-cell-value">
-      <input ng-model="config.displayDescription" type="checkbox" />
-    </div>
-  </div>
-  <div ng-if="config.displayDescription" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_displaydescriptionSelect')}} :</div>
-    <div class="row-cell row-cell-value">
-      <select ng-options="o.scriptName as o.name for o in OT" ng-model="config.descriptionObjectTypeScriptname" ng-change="getObjects(config.descriptionObjectTypeScriptname)"></select>
-    </div>
-    <div class="row-cell row-cell-value">
-      <select ng-options="o.object_id as o.name for o in objDescription |  orderBy:'name'" ng-model="config.descriptionObjectID"></select>
-    </div>
-  </div>
   <div class="row bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('homepage_custom_background_url_image')}} :</div>
     <div class="row-cell row-cell-value">
       <input class="largeCell" ng-model="config.backgroundImageUrl" type="text" />
     </div>
   </div>
-  <div class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_custom_activate_last_modified_objects')}} :</div>
-    <div class="row-cell row-cell-value">
-      <input ng-model="config.displayLastMdifiedObject" type="checkbox" />
+  <div class="tabs">
+    <div ng-repeat="(i, col) in config.columns | orderBy:'order'" ng-class="{active: col.selected == true}" class="tab-link tab-{{col.Id}}" ng-click="selectColumn(i)" data-id="{{col.Id}}">{{$root.i18n('column')}} {{i}}</div>
+    <div class="add-tab-link">
+      <a class="btn-add-operation btn page-action no-text" title="{{$root.i18n('add_column')}}" ng-click="addColumn()"><i class="fa fa-plus" aria-hidden="true"></i></a>
     </div>
   </div>
-  <div ng-if="config.displayLastMdifiedObject" class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_display_index_page')}} :&nbsp;</div>
-    <div class="row-cell row-cell-value">
-      <input ng-model="config.lastModifiedObjectIndexpage" type="checkbox" />
-    </div>
-  </div>
-  <div ng-if="config.displayLastMdifiedObject && config.lastModifiedObjectIndexpage" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_index_page_link')}} :</div>
-    <div class="row-cell row-cell-value">
-      <input class="largeCell" ng-model="config.lastModifiedObjectIndexpage_link" />
-    </div>
-  </div>
-  <div ng-if="config.displayLastMdifiedObject && config.lastModifiedObjectIndexpage" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_index_page_text')}} :</div>
-    <div class="row-cell row-cell-value">
-      <input class="largeCell" ng-model="config.lastModifiedObjectIndexpage_text" />
-    </div>
-  </div>
-  <div ng-if="config.displayLastMdifiedObject" class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_display_image_in_favourite')}} :&nbsp;</div>
-    <div class="row-cell row-cell-value">
-      <input ng-model="config.lastModifiedObjectFav" type="checkbox" />
-    </div>
-  </div>
-  <div ng-if="config.displayLastMdifiedObject && config.lastModifiedObjectFav" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_display_image_in_favourite_link')}} :</div>
-    <div class="row-cell row-cell-value">
-      <input class="largeCell" ng-model="config.lastModifiedObjectFavLink" />
-    </div>
-  </div>
-  <div ng-if="config.displayLastMdifiedObject" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_objects_delay')}}</div>
-    <div class="row-cell row-cell-value">
-      <input class="mediumCell" ng-model="config.delay" />
-    </div>
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_last_modified_objects_delay2')}}</div>
-  </div>
-  <div ng-if="config.displayLastMdifiedObject" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('homepage_custom_objectType_to_select')}} :</div>
-    <div class="row-cell row-cell-value row-cell-max-width">
-      <div class="cell-content-wrapper filter-wrapper propertieslist">
-        <div class="add-filter-button" ng-repeat="(k,p) in objectTypes | orderBy:'name'">
-          <a ng-if="!p.properties.hasOwnProperty('allowautomaticdeletion')" class="btn-add-filter btn page-action" ng-class="(config.objectTypeToSelect[p.scriptName] && config.objectTypeToSelect[p.scriptName].enable) ? ['selected'] : []" ng-click="toggleHM(config.objectTypeToSelect,p.scriptName)">{{p.name}}</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div ng-if="config.displayLastMdifiedObject" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">Configure :</div>
-    <div class="row-cell row-cell-value">
-      <select ng-options="objectTypes[s].name for s in OTsSelected | orderBy:sortOT" ng-model="op.cdsSelected"></select>
-    </div>
-  </div>
-
-  <div ng-if="op.cdsSelected" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">Custom Display String :</div>
-    <div class="row-cell row-cell-value largeCell">
-      <input class="largeCell" ng-model="config.objectTypeToSelect[op.cdsSelected].cds" />
-    </div>
-  </div>
-  <div ng-if="op.cdsSelected" class="row bootstrap-iso">
-    <div class="row-cell row-cell-label">{{$root.i18n('property')}} :</div>
-    <div class="row-cell row-cell-value largeCell">
-      <select ng-model="config.objectTypeToSelect[op.cdsSelected].timeProperty">
-        <option ng-if="p.type==='Date'" value="{{sp}}" ng-repeat="(sp, p) in objectTypes[op.cdsSelected].properties">{{p.name}}</option>
-      </select>
-    </div>
-  </div>
-  <div ng-if="op.cdsSelected" class="bootstrap-iso row">
-    <div class="row-cell row-cell-label">{{$root.i18n('label_filter')}} :</div>
-  </div>
-  <div class="row">
-    <div ng-if="op.cdsSelected" class="row-cell row-cell-value row-cell-max-width">
-      <table class="cell-content-wrapper filter-wrapper">
-        <tr class="filter-row filter-header bootstrap-iso">
-          <th class="filter-cell filter-content header-cell header-property">{{$root.i18n('label_pt_filter_column_property')}}</th>
-          <th class="filter-cell filter-operator header-cell header-operator">{{$root.i18n('label_pt_filter_column_operator')}}</th>
-          <th class="filter-cell filter-value header-cell header-value">{{$root.i18n('label_pt_filter_column_value')}}</th>
-        </tr>
-        <tr class="filter-row filter-content filter-cell" ng-repeat="f in config.objectTypeToSelect[op.cdsSelected].filters">
-          <td class="filter-property-scriptname filter-cell">
-            <select ng-model="f.id" ng-change="processFilter(f)">
-              <option ng-selected="'prop_' + x.scriptName === f.id" value="prop_{{x.scriptName}}" ng-repeat="x in objectTypes[op.cdsSelected].properties">{{x.name}} </option>
-            </select>
-          </td>
-
-          <td ng-if="f.id" class="filter-operator filter-cell">
-            <select ng-model="f.Operator" ng-options="x for x in FilterOperators"></select>
-          </td>
-          <td ng-if="f.id" class="filter-value filter-cell">
-            <input class="largeCell" ng-model="f.Value" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='text'" />
-            <input ng-model="f.Value" type="checkbox" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='checkbox'" />
-            <input ng-model="f.Value" type="date" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='date'" />
-            <input ng-model="f.Value" type="number" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='number'" />
-            <select ng-model="f.Value" ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='lookup' && f.Operator != 'In'" ng-options="x.id as x.name for x in objectTypes[op.cdsSelected].properties[f.scriptname].lookups"></select>
-            <select
-              style="height:initial"
-              multiple
-              size="{{objectTypes[op.cdsSelected].properties[f.scriptname].lookups.length}}"
-              ng-model="f.Value"
-              ng-if="getPropertyDataType( objectTypes[op.cdsSelected], f.scriptname)==='lookup' && f.Operator == 'In'"
-              ng-options="x.id as x.name for x in objectTypes[op.cdsSelected].properties[f.scriptname].lookups"
-            ></select>
-          </td>
-          <td class="filter-cell">
-            <a class="btn page-action no-text" ng-click="config.objectTypeToSelect[op.cdsSelected].filters.splice($index,1)"><i class="fa fa-times" aria-hidden="true"></i></a>
-          </td>
-        </tr>
-        <tr>
-          <td class="add-filter-button bootstrap-iso">
-            <a class="btn-add-filter btn page-action" ng-click="addFilter(config.objectTypeToSelect[op.cdsSelected])">{{$root.i18n('label_pt_filter_add_new')}}</a>
-          </td>
-        </tr>
-      </table>
-    </div>
+  <div class="tabContent" ng-if="col.selected" ng-repeat="(icol, col) in config.columns">
+    <div ng-include src="'../../common/html/coffee/homePage_column.html'"></div>
   </div>
 </div>
