--- a/angularHTMLayout/homePage/home.ng.html
+++ b/angularHTMLayout/homePage/home.ng.html
@@ -3,6 +3,13 @@
     <div ng-repeat="(idisp, display) in col.displays | orderBy:'order'" ng-style="getStyleForDisplay(display)" class="homePage_display">
       <div class="homePage_evolveView" ng-if='display.type==="evolve_view"' ng-init="getHTMLView(display)" ng-bind-html="display.html"></div>
       <div class="homePage_description" ng-if='display.type==="object_description"' ng-init="getHTMLfromObject(display)" ng-bind-html="display.html"></div>
+      <div
+        class="homePage_last_modified_object"
+        ng-if='display.type==="last_modified_object"'
+        ng-init="searchForObjects(display)"
+        ng-include
+        src="'../../common/html/homePage/lastModifiedObjects.ng.html'"
+      ></div>
     </div>
   </div>
 </div>
