--- a/angularHTMLayout/coffee/homePage_column.html
+++ b/angularHTMLayout/coffee/homePage_column.html
@@ -29,7 +29,7 @@
 </div>
 <div class="tabContent" ng-if="display.selected" ng-repeat="(idisp, display) in col.displays ">
   <div class="remove-operation">
-    <a class="btn-remove btn page-action no-text" data-id="{{display.Id}}" title="{{$root.i18n('label_remove_operation')}}" ng-click="removeDisplay(idisp)"
+    <a class="btn-remove btn page-action no-text" data-id="{{display.Id}}" title="{{$root.i18n('label_remove_operation')}}" ng-click="removeDisplay(col,idisp)"
       ><i class="fa fa-trash-o" aria-hidden="true"></i
     ></a>
   </div>
@@ -71,6 +71,7 @@
         <option value="evolve_view">{{$root.i18n('evolve_view')}} </option>
         <option value="object_description">{{$root.i18n('object_description')}} </option>
         <option value="last_modified_object">{{$root.i18n('last_modified_object')}} </option>
+        <option value="links_in_bloc">Links In Box </option>
       </select>
     </div>
   </div>
@@ -78,4 +79,5 @@
   <div ng-if="display.type === 'evolve_view'" ng-include src="'../../common/html/coffee/homePage_evolve_view.html'"></div>
   <div ng-if="display.type === 'object_description'" ng-include src="'../../common/html/coffee/homePage_object_description.html'"></div>
   <div ng-if="display.type === 'last_modified_object'" ng-include src="'../../common/html/coffee/homePage_last_modified_object.html'"></div>
+  <div ng-if="display.type === 'links_in_bloc'" ng-include src="'../../common/html/coffee/homePage_link_in_box.html'"></div>
 </div>
